--- a/etch-a-sketch/style/style.scss
+++ b/etch-a-sketch/style/style.scss
@@ -5,6 +5,7 @@
   box-sizing: border-box;
 }
 body {
+  position: relative;
   font-family: "Indie Flower", cursive;
   h1 {
     margin: 2rem auto;
@@ -35,5 +36,26 @@ body {
     display: flex;
     flex-direction: column;
     box-shadow: 2px 2px 2px 0.5rem rgba(0, 0, 0, 0.2);
+  }
+  footer.attribute {
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    height: 3rem;
+    padding: 1rem 0;
+    line-height: 1rem;
+    color: black;
+    transition: all 0.2s ease-in-out;
+    text-align: center;
+    font-weight: 700;
+    a {
+      text-decoration: none;
+      color: black;
+
+      &:hover {
+        color: aquamarine;
+      }
+    }
   }
 }
